--- a/angular/src/app/user/partials/registerform.tpl.html
+++ b/angular/src/app/user/partials/registerform.tpl.html
@@ -7,19 +7,19 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">First</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="example" ng-model="data.firstName" required autofocus>
+                        <input type="text" class="form-control input-lg" placeholder="example" ng-model="data.firstName" required autofocus>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Last</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="example" ng-model="data.lastName" required>
+                        <input type="text" class="form-control input-lg" placeholder="example" ng-model="data.lastName" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">E-mail</label>
                     <div class="col-sm-8">
-                        <input type="email" class="form-control" placeholder="@email.com" ng-model="data.email" required>
+                        <input type="email" class="form-control input-lg" placeholder="@email.com" ng-model="data.email" required>
                     </div>
                 </div>
         </div>
@@ -27,14 +27,14 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Phone</label>
                     <div class="col-sm-8">
-                       <input type="tel" class="form-control" placeholder="415-000-0000" ng-model="data.phone" required/>
+                       <input type="tel" class="form-control input-lg" placeholder="415-000-0000" ng-model="data.phone" required/>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Password</label>
                     <div class="col-sm-8">
-                        <input type="password" class="form-control" placeholder="Password" ng-model="data.pass" required>
+                        <input type="password" class="form-control input-lg" placeholder="Password" ng-model="data.pass" required>
                     </div>
                 </div>
         </div>
